src/components/MultiSelect/MultiSelect.css
.main {
  position: relative;

  :global(.bp3-input) {
    display: block;
    border: 1px solid var(--grey-200);
    border-radius: var(--spacing-2);
    font-size: var(--font-size-normal);
    padding: 0 var(--spacing-small);
    min-height: var(--spacing-8);
    color: var(--grey-900);
    box-shadow: none;

    &:hover {
      border-color: var(--primary-6);
      box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.04), 0px 2px 4px rgba(96, 97, 112, 0.16);
    }

    &:focus {
      border-color: var(--primary-7);
    }

    &::-moz-placeholder,
    &::-webkit-input-placeholder,
    &:-ms-input-placeholder,
    &:-moz-placeholder,
    &::placeholder {
      color: var(--grey-400) !important;
      font-weight: 400;
    }

    &:disabled {
      background-color: var(--grey-50);
      color: var(--grey-400);
      border-color: var(--grey-200);
      box-shadow: none;
    }
  }

  :global(.bp3-popover-open .bp3-input) {
    color: var(--grey-800);
    border-color: var(--primary-7);
    box-shadow: none;
    border-radius: 4px 4px 0 0;
  }

  & :global(.bp3-overlay) {
    display: block;
    width: 100%;
  }

  & :global(.bp3-transition-container),
  & :global(.bp3-popover) {
    width: 100%;
    box-shadow: none;
    border-radius: 0 0 4px 4px;
  }

  & :global(.bp3-menu) {
    max-height: 350px;
    width: 100%;
    overflow: auto;
    border-radius: var(--spacing-2);
    padding: 0;
    position: absolute;
    top: var(--spacing-1);
    border: 0.5px solid rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    box-shadow: 0px 0px 1px rgb(40 41 61 / 4%), 0px 2px 4px rgb(96 97 112 / 16%);
  }

  & .tag {
    background: var(--primary-2);
    color: var(--grey-900);
    padding-right: var(--spacing-4);

    :global {
      .bp3-tag-remove {
        width: var(--spacing-4);
        height: var(--spacing-4);
        display: flex;
        border: 1px solid var(--grey-700);
        border-radius: var(--spacing-10);
        align-items: center;
        opacity: 0.4;
      }

      .bp3-icon-small-cross {
        svg {
          width: 10px;
          height: 10px;
        }
      }
    }
  }

  & .menuItem {
    min-height: var(--spacing-8);
    height: fit-content;
    padding: 0 var(--spacing-small);
    display: flex;
    align-items: center;
    cursor: pointer;

    & .checkbox {
      margin: 0 var(--spacing-small) 0 0;
    }

    &.active {
      background: var(--primary-1);
    }

    &.disabled {
      color: var(--grey-400);
      cursor: not-allowed;
    }

    &.loading {
      color: var(--grey-400);
      cursor: not-allowed;
    }

    &:hover {
      background: var(--primary-1);
    }
  }

  :global(.icon-container) {
    position: absolute;
    right: 0;
  }
}

